--- a/src/libraries/System.Drawing.Common/src/System.Drawing.Common.csproj
+++ b/src/libraries/System.Drawing.Common/src/System.Drawing.Common.csproj
@@ -27,6 +27,7 @@
     <Compile Include="System\Drawing\GraphicsUnit.cs" />
     <Compile Include="System\Drawing\Image.cs" />
     <Compile Include="System\Drawing\ImageType.cs" />
+    <Compile Include="System\Drawing\Imaging\CachedBitmap.cs" />
     <Compile Include="System\Drawing\Pen.cs" />
     <Compile Include="System\Drawing\Pens.cs" />
     <Compile Include="System\Drawing\RotateFlipType.cs" />
@@ -154,10 +155,8 @@
     <Compile Include="System\Drawing\Imaging\ImageCodecInfo.cs" />
     <Compile Include="System\Drawing\Imaging\ImageCodecInfoPrivate.cs" />
     <Compile Include="System\Drawing\Imaging\MetafileFrameUnit.cs" />
-    <Compile Include="$(CommonPath)Interop\Windows\User32\Interop.LOGFONT.cs"
-             Link="Common\Interop\Windows\User32\Interop.LOGFONT.cs" />
-    <Compile Include="$(CommonPath)Interop\Windows\Gdi32\Interop.RasterOp.cs"
-             Link="Common\Interop\Windows\Gdi32\Interop.RasterOp.cs" />
+    <Compile Include="$(CommonPath)Interop\Windows\User32\Interop.LOGFONT.cs" Link="Common\Interop\Windows\User32\Interop.LOGFONT.cs" />
+    <Compile Include="$(CommonPath)Interop\Windows\Gdi32\Interop.RasterOp.cs" Link="Common\Interop\Windows\Gdi32\Interop.RasterOp.cs" />
     <EmbeddedResource Include="Resources\System\Drawing\DefaultComponent.bmp">
       <LogicalName>System.Drawing.DefaultComponent.bmp</LogicalName>
     </EmbeddedResource>
@@ -341,8 +340,7 @@
     <Compile Include="System\Drawing\Text\PrivateFontCollection.Unix.cs" />
     <Compile Include="System\Drawing\LibraryResolver.cs" />
     <Compile Include="misc\ExternDll.Unix.cs" />
-    <Compile Include="$(CommonPath)Interop\Unix\Interop.Libraries.cs"
-             Link="Common\Interop\Unix\Interop.Libraries.cs" />
+    <Compile Include="$(CommonPath)Interop\Unix\Interop.Libraries.cs" Link="Common\Interop\Unix\Interop.Libraries.cs" />
     <EmbeddedResource Include="Resources\System\Drawing\Error.ico">
       <LogicalName>placeholder.ico</LogicalName>
     </EmbeddedResource>
